--- a/SchoolLibraryUnitTest/SchoolLibraryUnitTest.csproj
+++ b/SchoolLibraryUnitTest/SchoolLibraryUnitTest.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SchoolLibraryUnitTesting\SchoolLibraryUnitTesting.csproj">
+      <Project>{2720d50b-bf68-4b8d-8c07-588d68db1edd}</Project>
+      <Name>SchoolLibraryUnitTesting</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
